tests/rosetta/out/Haskell/accumulator-factory.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/accumulator-factory.hs:118:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/accumulator-factory.hs:111:1
                 /workspace/mochi/tests/rosetta/out/Haskell/accumulator-factory.hs:118:1
    |
118 | main = do
    | ^^^^
